<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_list"
    android:id="@+id/mainLayout">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="2"
        android:contentDescription="@string/tenor_logo_image_description"
        app:srcCompat="@drawable/tenor_logo_v2" />

    <TextView
        android:id="@+id/appDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textSize="17sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/captureMomentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:layout_weight="0"
        app:cornerRadius="8dp"
        android:drawableLeft="@android:drawable/ic_menu_camera"
        android:text="@string/capture_moment_activity_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nudgeMoodText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:padding="15dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/nudgeMoodImage"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/frameLayoutFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemHorizontalTranslationEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_nav_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>